# fusor

./: .gitignore  .pre-commit-config.yaml  README.md  compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: checks.yaml
docs/source/: contributing.rst  fusion_match_classes.rst  index.rst  install.rst  usage.rst
docs/source/reference/: index.rst
docs/source/reference/api/: fusor.exceptions.rst  fusor.fusion_caller_models.rst  fusor.fusion_matching.rst  fusor.fusor.rst  fusor.harvester.rst  fusor.models.rst  fusor.nomenclature.rst  fusor.tools.rst  fusor.transcript_junction_builder.rst  fusor.translator.rst
notebooks/: README.md  fusion_evidence_matching.ipynb
notebooks/demonstrative_analysis/: demonstrative_analysis.ipynb  genie_analysis.ipynb  requirements.txt  transcript_accession_analysis.ipynb
notebooks/evidence_matching/: assayed_fusion_matching.ipynb  fusion_evidence_matching.ipynb
src/fusor/: config.py  fusion_caller_models.py  fusion_matching.py  fusor.py  harvester.py  models.py  nomenclature.py  quick_start.py  tools.py  transcript_junction_builder.py  translator.py
src/fusor/data/: moa_translated_fusions.pkl
src/fusor/examples/: alk.json  bcr_abl1.json  bcr_abl1_expanded.json  ewsr1.json  ewsr1_elements_only.json  ewsr1_no_assay.json  ewsr1_no_causative_event.json  igh_myc.json  tpm3_itd.json  tpm3_ntrk1.json  tpm3_pdgfrb.json
src/fusor/notebooks/: fusion_evidence_matching.ipynb
src/fusor/utils/: __init__.py  storage.py
tests/: conftest.py  fusion_matching_test_cases.yaml  setup_test_caches.py  test_fusion_matching.py  test_fusor.py  test_harvesters.py  test_models.py  test_nomenclature.py  test_quick_start.py  test_transcript_junction_builder.py  test_translators.py
tests/fixtures/: README.md  genie_test.txt
