[project]
name = "fusor"
authors = [
    {name = "Alex Wagner", email = "alex.wagner@nationwidechildrens.org"},
    {name = "Kori Kuzma", email = "kori.kuzma@nationwidechildrens.org"},
    {name = "James Stevenson", email = "james.stevenson@nationwidechildrens.org"},
    {name = "Katie Stahl", email = "kathryn.stahl@nationwidechildrens.org"},
    {name = "Jeremy Arbesfeld", email = "jeremy.arbesfeld@nationwidechildrens.org"}
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
description = "Computable object representation and validation for gene fusions"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "pydantic ==2.*",
    "ga4gh.vrs >=2.2.0,<3.0",
    "biocommons.seqrepo",
    "gene-normalizer ~=0.11.1",
    "civicpy ~=5.1.0",
    "cool-seq-tool ~=0.15.2",
]
dynamic=["version"]

[project.optional-dependencies]
tests = ["pytest", "pytest-cov", "pytest-asyncio", "pyYAML"]
dev = [
    "prek>=0.2.23",
    "ruff==0.14.10",
]
docs = [
    "sphinx>=7.2, <8.2.0",
    "sphinx-autodoc-typehints==1.22.0",
    "sphinx-autobuild==2021.3.14",
    "sphinx-copybutton==0.5.2",
    "sphinxext-opengraph==0.8.2",
    "furo>=2023.9.10",
    "sphinx-github-changelog==1.2.1"
]

[project.urls]
Homepage = "https://github.com/cancervariants/fusor"
Documentation = "https://github.com/cancervariants/fusor"
Changelog = "https://github.com/cancervariants/fusor/releases"
Source = "https://github.com/cancervariants/fusor"
"Bug Tracker" = "https://github.com/cancervariants/fusor/issues"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"fusor.examples" = ["*.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=src --cov-report term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true

[tool.ruff]
src = ["src"]
exclude = ["docs/source/conf.py", "notebooks/"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # unused
    "AIR",
    "ERA",
    "YTT",
    "BLE",
    "FBT",
    "CPY",
    "DJ",
    "EXE",
    "FIX",
    "FA",
    "PYI",
    "TD",
    "C90",
    "NPY",
    "PD",
    # ignore for compatibility with formatter
    "D206",
    "D300",
    "W191",
    "E111",
    "E114",
    "E117",
    "E501",
    "W191",
    "S321",
    "COM812",
    "COM819",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    # don't require types on *args, **kwargs
    "ANN002",
    "ANN003",
    # subjective pylint thresholds
    "PLR0904",
    "PLR091",
    "PLR1702",
    "PLC0206",
    # misc unnecessary stuff
    "S321",
    "D203",
    "D205",
    "D213",
    "D400",
    "D415",
]

[tool.ruff.lint.per-file-ignores]
# ANN001 - missing-type-function-argument
# ANN2 - missing-return-type
# ANN201 - missing-return-type-undocumented-public-function
# D100 - undocumented-public-module
# D103 - undocumented-public-function
# S101 - assert
# B011 - assert-false
# N803 - invalid-argument-name
# N805 - invalid-first-argument-name-for-method
# N815 - mixed-case-variable-in-class-scope
# INP001 - implicit-namespace-package
# SLF001 - private-member-access
# PLR2004 - magic-value-comparison
"tests/*" = [
    "ANN001",
    "ANN2",
    "D",
    "S101",
    "B011",
    "INP001",
    "SLF001",
    "PLR2004",
]
"src/fusor/models.py" = ["ANN201", "N803", "N805", "N815", "ANN001", "ANN2", "ANN102"]
"scripts/*" = ["INP001"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.format]
docstring-code-format = true
